FIX:added margin:0 to body element to fix gaps left and right of some divs

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body{
     flex-direction: column;
     background-color: #1f2937;
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin:0;
 }
 a{
     text-decoration: none;
